# ncnn

./: build.sh
examples/esp/nanodet/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp/nanodet/main/: CMakeLists.txt  image0.rgb  image1.rgb  image2.rgb  nanodet_main.cpp
examples/esp/ncnn/: CMakeLists.txt  README.md
examples/esp/ncnn/include/ncnn/: platform.h
examples/esp/ncnn/lib/cmake/ncnn/: ncnn.cmake
toolchains/: esp32.toolchain.cmake
